MDL-17273 Added a back button to the error message and fixed missing handling of "custom" scope

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -2227,6 +2227,11 @@ div.allcoursegrades {
     text-align: right;
     padding: 4px 0px 5px 0px;
 }
+
+.importoutcomenofile .singlebutton {
+    text-align: center;
+    margin-top: 5px;
+}
 /* gradebook edit tree */
 
 .grade-edit-tree .gradetreebox {
