--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -2577,6 +2577,11 @@ div.allcoursegrades {
     text-align: right;
     padding: 4px 0px 5px 0px;
 }
+
+.importoutcomenofile .singlebutton {
+    text-align: center;
+    margin-top: 5px;
+}
 /* gradebook edit tree */
 
 .grade-edit-tree .gradetreebox {
