--- a/theme/standard/styles_ie6.css
+++ b/theme/standard/styles_ie6.css
@@ -63,7 +63,7 @@ form.mform textarea {
   display:inline-block; padding-left:2px;
 }
 
-#course-view li.activity {
+.course-view li.activity {
   height:0;
 }
 #mod-quiz-review #middle-column {
