--- a/theme/bootstrapbase/less/moodle/modules.less
+++ b/theme/bootstrapbase/less/moodle/modules.less
@@ -114,6 +114,11 @@ select {
     margin-top: 4px;
 }
 
+.breadcrumb-button .singlebutton {
+    float: left;
+    margin-left: 4px;
+}
+
 .dir-rtl {
     .nav-tabs > li,
     .nav-pills > li {
@@ -140,6 +145,11 @@ select {
 .dir-rtl .breadcrumb-button,
 .dir-rtl .navbar .btn-navbar {
     float: left;
+}
+
+.dir-rtl .breadcrumb-button .singlebutton {
+    float: right;
+    margin-right: 4px;
 }
 
 .ie .row-fluid .desktop-first-column {
