--- a/theme/bootstrapbase/less/moodle/responsive.less
+++ b/theme/bootstrapbase/less/moodle/responsive.less
@@ -50,6 +50,11 @@
     .form-buttons {
         padding-left: @horizontalComponentOffset980;
     }
+    .dir-rtl {
+        .userprofile dl.list dd {
+            margin-right: @horizontalComponentOffset980;
+        }
+    }
 
 }
 
@@ -86,11 +91,18 @@
         .mform .fdescription.required,
         .userprofile dl.list dd,
         .form-horizontal .controls {
-            margin-right: @horizontalComponentOffset1200;
+            margin-right: @horizontalComponentOffset1200 - 100px;
         }
         #page-mod-forum-search .c1 {
             margin-right: @horizontalComponentOffset1200;
         }
+        .form-item .form-label,
+        .mform .fitem div.fitemtitle,
+        .userprofile dl.list dt,
+        .form-horizontal .control-label {
+            width: @horizontalComponentOffset1200 - 120px;
+        }
+
     }
     .path-admin .buttons,
     .form-buttons {
